# yolop_deploy_simulation

./: readme.txt
Customized-messages/: CMakeLists.txt  package.xml
Customized-messages/msg/: Bbox.msg  BboxList.msg  pose_source.msg
deploy/: CMakeLists.txt  common.hpp  gen_wts.py  main.cpp  main_simulation.cpp  package.xml  utils.h  yololayer.cu  yololayer.h  yolov5.hpp
